# intro-to-ai

./: .gitignore  .nojekyll  0-Introduction_LOs.ipynb  1-Perceptron.ipynb  10-Training-Pipeline.ipynb  2-HiddenLayers.ipynb  6-Classes_and_Perceptron.ipynb  8-GradientDescent.ipynb  9-BackPropogation.ipynb  README.md  _quarto.yml  contributors.html  contributors.qmd  index.html  index.qmd  pyproject.toml  robots.txt  search.json  setup.html  setup.qmd  sitemap.xml
CodePart1/: 1-Pytorch_and_Tensors_zhengzhe.ipynb  2-Classes_and_Perceptron_zhengzhe.ipynb  3-DataPipeline_zhengzhe.ipynb  4-Multi_Layer_Perceptron_zhengzhe.ipynb  intro-to-AI-vaishnu.ipynb  intro_to_AI_zhengzhe.ipynb  readme.md
CodePart2/: 5-Training-Pipeline.ipynb  readme.md
TheoryPart1/: 2-HiddenLayers.ipynb  2-HiddenLayers_Boyi.ipynb  2-HiddenLayers_BoyiFINAL.ipynb  3-EvaluatingOurMLP.ipynb  TheoryPart1_Boyi.ipynb  TheoryPart1_BoyiFINAL.ipynb  readme.md
TheoryPart2/: 1-Gradient Descent.ipynb  2-Back propagation.ipynb  readme.md
assets/: styles.scss
notebooks/: 00-Introduction.html  00-Introduction.ipynb  01-Perceptron.html  01-Perceptron.ipynb  02-Activation-functions.html  02-Activation-functions.ipynb  02-Hidden-layers.ipynb  03-MLP-evaluation.html  03-MLP-evaluation.ipynb  04-PyTorch-and-tensors.html  04-PyTorch-and-tensors.ipynb  05-Data-pipeline.html  05-Data-pipeline.ipynb  06-Classes-and-perceptron.html  06-Classes-and-perceptron.ipynb  07-Multi-layer-perceptron.html  07-Multi-layer-perceptron.ipynb  08-Gradient-descent.html  08-Gradient-descent.ipynb  09-Back-propogation.ipynb  (+10 more)
(+5 files in other folders)
